--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  d3f_dependency_manager:
+    git:
+      url: https://github.com/DanhDue/d3f_dependency_manager.git
+      ref: develop
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
+  d3f_dev_dependencies_manager:
+    git:
+      url: https://github.com/DanhDue/d3f_dev_dependencies_manager.git
+      ref: develop
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
