--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
-  d3f_dev_dependencies_manager:
-    git:
-      url: https://github.com/DanhDue/d3f_dev_dependencies_manager.git
-      ref: develop
+  flutter_lints: ^2.0.0
+  flutter_native_splash: ^2.2.10+1
+  build_runner: ^2.2.1
+  json_serializable: ^6.4.1
+  hive_generator: ^1.1.3
+  freezed: ^2.1.0+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
