--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   d3f_dependency_manager:
     git:
@@ -42,26 +39,17 @@ dev_dependencies:
   hive_generator: ^1.1.3
   freezed: ^2.1.0+1
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+#dependency_overrides:
+#  d3f_shared:
+#    git:
+#      url: https://github.com/DanhDue/d3f_shared.git
+#      ref: develop
 
 flutter:
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+
   uses-material-design: true
-
-  # To add Flutter specific assets to your application, add an assets section,
-  # like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
+#  assets:
+#    - packages/d3f_shared/assets/
 
   # To add Flutter specific custom fonts to your application, add a fonts
   # section here, in this "flutter" section. Each entry in this list should
